Correct stylelint inclusions

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_settings.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_settings.scss
@@ -78,7 +78,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: #f4f8f9;
 $body-font-color: $black;
-$body-font-family: "Open Sans", 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif; // custom
+$body-font-family: "Open Sans", "Helvetica Neue", helvetica, roboto, arial, sans-serif; // custom
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
