Replace sass-lint and its plugin with stylelint

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/dashboard/stage_overview/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/dashboard/stage_overview/index.scss
@@ -329,7 +329,7 @@ $dark-gray: #2f4f4f;
   display: flex;
 
   select {
-    width: 55px !important; // sass-lint:disable-line no-important
+    width: 55px !important;
     padding-right: 25px;
     height: 30px;
     line-height: 30px;
@@ -535,7 +535,7 @@ $dark-gray: #2f4f4f;
   margin: 7px 0 5px 8px;
 }
 
-.checkbox-cell input[type="checkbox"] { // sass-lint:disable-line no-qualifying-elements
+.checkbox-cell input[type="checkbox"] {
   height: 13px;
   margin-top: -2px;
 }
@@ -589,7 +589,7 @@ $dark-gray: #2f4f4f;
   border-radius: 6px;
   position: absolute;
   z-index: map_get($zindex, tooltip);
-  background: rgb(243, 243, 243, 95%); // sass-lint:disable-line no-color-literals
+  background: rgb(243, 243, 243, 95%);
   border: 1px solid $tooltip-border-color;
 
   ::before {
