--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/agents/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/agents/index.scss
@@ -73,7 +73,7 @@ $dropdown-button-content-z-index: 5;
   margin: 0;
   padding: 0;
 
-  input[type="checkbox"] { // sass-lint:disable-line no-qualifying-elements
+  input[type="checkbox"] {
     width: 12px;
     height: 12px;
     margin-top: -5px;
