--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/config_repos/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/config_repos/index.scss
@@ -161,11 +161,11 @@ code {
   margin-right: 50px;
 }
 
-select.form-control { // sass-lint:disable-line no-qualifying-elements
+select.form-control {
   width: $input-length-for-rules;
 }
 
-input.form-control { // sass-lint:disable-line no-qualifying-elements
+input.form-control {
   width: $input-length-for-rules;
 }
 
