--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pipelines/parameters_editor.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pipelines/parameters_editor.scss
@@ -33,7 +33,7 @@
         border: none;
         vertical-align: top;
 
-        input[type="text"] { // sass-lint:disable-line no-qualifying-elements
+        input[type="text"] {
           width: 240px;
         }
 
