--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pluggable_scms/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pluggable_scms/index.scss
@@ -30,7 +30,7 @@
     margin-top: 0.15rem;
   }
 
-  input[type="radio"] { // sass-lint:disable-line no-qualifying-elements
+  input[type="radio"] {
     margin: 0;
   }
 }
