--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/secret_configs/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/secret_configs/index.scss
@@ -40,7 +40,7 @@
   margin: 0 0;
 }
 
-.rules-table input[type="text"] { // sass-lint:disable-line no-qualifying-elements
+.rules-table input[type="text"] {
   margin: 0 0;
 }
 
