Upgrade font awesome 4 to font awesome 6

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-glyphs.scss.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/_font-awesome-glyphs.scss.erb
@@ -15,23 +15,22 @@
  * limitations under the License.
  */
 @import "font-awesome-sprockets";
-@import "font-awesome/scss/variables";
 @import "bourbon/core/bourbon";
 
 <%
   variables = {}
-  variable_definitions = File.read(File.join(Rails.root, 'node_modules/font-awesome/scss/_variables.scss')).lines.grep(/\$fa-var-/).collect(&:strip)
+  variable_definitions = File.read(File.join(Rails.root, 'node_modules/@fortawesome/fontawesome-free/scss/_variables.scss')).lines.grep(/\$fa-var-/).collect(&:strip)
   variable_definitions.each do |definition|
-    definition =~ /\$fa-var-(.*): "\\(.*)";/
-    variables[$1] = $2;
+    definition =~ /\$fa-var-(.*): \\(.*);/
+    variables[$1] = $2
   end
 %>
 
 $fa-font-icons: (
-                <% variables.each do |name, unicode| %>
-                  fa-var-<%= name %>: '<%= unicode %>',
-                <% end %>
-                );
+<% variables.each do |name, unicode| %>
+  fa-var-<%= name %>: "<%= unicode %>",
+<% end %>
+);
 
 @function unicode($str) {
   @return unquote("\"")+unquote(str-insert($str, "\\", 1))+unquote("\"")
@@ -45,23 +44,29 @@ $fa-font-icons: (
   }
 }
 
-@mixin icon-only($type, $font: 'font-awesome') {
-  @if $font == 'font-awesome' {
-    font-family: 'FontAwesome';
-    @include icon-glyph("fa-var-#{$type}");
+$fa-style-family-brands: "#{str-slice($fa-style-family, 1, -5)} Brands";
+
+@mixin icon-only($type, $font: "font-awesome") {
+  @if $font == "font-awesome" {
+    font-family: $fa-style-family, sans-serif;
+    font-weight: 900;
+  } @else if $font == "font-awesome-brands" {
+    font-family: $fa-style-family-brands, sans-serif;
+    font-weight: 400;
   } @else {
     @error "Could not find font family #{$font}";
   }
+
+  @include icon-glyph("fa-var-#{$type}");
 }
 
-@mixin icon($type, $size: auto, $margin: auto, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: 'font-awesome') {
+@mixin icon($type, $size: auto, $margin: auto, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: "font-awesome") {
   @include icon-only($type: $type, $font: $font);
 
-  font-weight:            normal;
-  font-style:             normal;
-  display:                inline-block;
-  text-decoration:        inherit;
-  line-height:            $line-height;
+  font-style: normal;
+  display: inline-block;
+  text-decoration: inherit;
+  line-height: $line-height;
 
   @if $margin != auto {
     margin: $margin;
@@ -71,7 +76,7 @@ $fa-font-icons: (
   }
   @if $top != auto {
     position: relative;
-    top:      $top;
+    top: $top;
   }
   @if $color != auto {
     color: $color;
@@ -82,12 +87,12 @@ $fa-font-icons: (
   -webkit-font-smoothing: antialiased;
 }
 
-@mixin in-progress-spinner($type: spinner, $font: 'font-awesome') {
-  @include icon-only($type: $type, $font: $font);
+@mixin in-progress-spinner($type: spinner) {
+  @include icon-only($type: $type);
   @include animation(spin 1s linear infinite);
 }
 
-@mixin icon-before($type, $size: auto, $margin: 5px, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: 'font-awesome', $progress-spinner: false) {
+@mixin icon-before($type, $size: auto, $margin: 5px, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: "font-awesome", $progress-spinner: false) {
   &:before {
     @include icon($type, $size, $margin, $line-height, $color, $top, $shadow, $font: $font);
     @content;
@@ -100,7 +105,7 @@ $fa-font-icons: (
   }
 }
 
-@mixin icon-after($type, $size: auto, $margin: 5px, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: 'font-awesome', $progress-spinner: false) {
+@mixin icon-after($type, $size: auto, $margin: 5px, $line-height: 1em, $color: auto, $top: auto, $shadow: none, $font: "font-awesome", $progress-spinner: false) {
   &:after {
     @include icon($type, $size, $margin, $line-height, $color, $top, $shadow, $font: $font);
     @content;
