--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/shared/_notifications.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/shared/_notifications.scss
@@ -96,7 +96,7 @@
   }
 
   .bell {
-    @include icon-before(bell-o, $color: #fff);
+    @include icon-before(bell, $color: #fff);
 
     font-size: 18px;
   }
