--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/shared/_schmodal.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/shared/_schmodal.scss
@@ -132,7 +132,7 @@ $overlay-border-radius: 3px;
 }
 
 .close-icon {
-  @include icon-before($type: close);
+  @include icon-before($type: xmark);
 }
 
 .overlay-content {
