--- a/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_dashboard_view_tabs.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_dashboard_view_tabs.scss
@@ -429,7 +429,7 @@ button {
 }
 
 .revert {
-  @include icon-before($type: close);
+  @include icon-before($type: xmark);
 
   position: absolute;
   right: 5px;
