--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/components/link/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/components/link/index.scss
@@ -27,5 +27,5 @@
 }
 
 .external-icon {
-  @include icon-after($type: $fa-var-external-link);
+  @include icon-after($type: $fa-var-external-link-alt);
 }
