--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/admin_pipelines/edit_pipeline_group.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/admin_pipelines/edit_pipeline_group.scss
@@ -16,7 +16,7 @@
 @import "../../global/common";
 
 .icon-delete {
-  @include icon-before($type: $fa-var-times);
+  @include icon-before($type: $fa-var-xmark);
 
   border: none;
   display: inline;
