--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/roles/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/roles/index.scss
@@ -146,7 +146,7 @@ input[type="radio"][disabled] + label[for] {
 }
 
 .icon-delete {
-  @include icon-before($type: $fa-var-times);
+  @include icon-before($type: $fa-var-xmark);
 
   border: none;
   display: inline;
