--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/admin_templates/modals.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/admin_templates/modals.scss
@@ -85,7 +85,7 @@
 }
 
 .icon-delete {
-  @include icon-before($type: $fa-var-times);
+  @include icon-before($type: $fa-var-xmark);
 
   border: none;
   display: inline;
