--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/secret_configs/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/secret_configs/index.scss
@@ -99,7 +99,7 @@
 }
 
 .icon-delete {
-  @include icon-before($type: $fa-var-times);
+  @include icon-before($type: $fa-var-xmark);
 
   border: none;
   display: inline;
