--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/new_plugins/foundation_hax.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/new_plugins/foundation_hax.scss
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /*
  * Copyright 2022 Thoughtworks, Inc.
  *
@@ -13,7 +15,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@charset "utf-8";
 @import "../../../../app/assets/new_stylesheets/variables";
 @import "../../../../app/assets/new_stylesheets/shared/go-variables";
 
