--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/components/_navbar.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/css_sass/components/_navbar.scss
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import "../base/mixins.sass";
+@import "../base/mixins";
 
 .header #application_logo {
   background-image: image_url("g9/logo_go.png");
