Don't crop pipeline instance labels
Many other parts of the UI are completely messed up with really long pipeline instance labels, but given the lack of tooltip here if the label is cropped, giving some more horizontal space and wrapping is probably a better option. Should only have an effect when people are using custom labels for pipeline instances rather than normal counters.

Also positions the stage boxes at fixed height from the top of each box rather than centering, which looks a bit weird with the wrapping; and happens to make positioning the stage overview popup simpler.

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pipeline_activity/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pipeline_activity/index.scss
@@ -54,8 +54,8 @@ $stage-action-icon-z-index: 1;
     flex-direction: column;
     justify-content: center;
     width: 20%;
-    max-width: 200px;
-    min-width: 200px;
+    max-width: 325px;
+    min-width: 325px;
     margin-right: 16px;
     padding-bottom: 5px;
   }
@@ -96,6 +96,11 @@ $stage-action-icon-z-index: 1;
   justify-content: space-between;
   font-size: 16px;
 
+  .label {
+    word-break: break-all;
+    word-wrap: break-word;
+  }
+
   a {
     font-size: 14px;
     text-decoration: none;
@@ -122,10 +127,11 @@ $stage-action-icon-z-index: 1;
 
 .stage-box-pipeline-activity {
   max-width: $stage-width + 50px;
-  height: 100%;
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
+  padding-top: 36px;
+  padding-bottom: 36px;
 }
 
 .stage-status {
@@ -138,10 +144,10 @@ $stage-action-icon-z-index: 1;
 
 .stage-status-wrapper {
   display: flex;
-  height: 100%;
   position: relative;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
+  padding-top: 5px;
 }
 
 .disabled-icon {
