--- a/server/src/main/webapp/WEB-INF/rails/app/views/value_stream_map/show_material.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/value_stream_map/show_material.html.erb
@@ -10,7 +10,7 @@
       <span class="label">Revision</span>
       <h1><%= params[:revision] %> </h1></li>
   </ul>
-  <% if (supports_vsm_analytics?) %>
+  <% if supports_vsm_analytics? %>
     <button class="btn-primary enable-analytics"><i class="icon_vsm_analytics"></i>Analytics</button>
   <% end %>
 </div>
