--- a/server/src/main/webapp/WEB-INF/rails/app/views/value_stream_map/show.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/value_stream_map/show.html.erb
@@ -11,7 +11,7 @@
           <h1><%= @pipeline!=nil ? @pipeline.getLabel() : params[:pipeline_counter] %> </h1>
         </li>
     </ul>
-    <% if (supports_vsm_analytics?) %>
+    <% if supports_vsm_analytics? %>
     <button class="btn-primary enable-analytics"><i class="icon_vsm_analytics"></i>Analytics</button>
     <% end %>
 </div>
