Fix padding in agents tables on Chromium-based browsers
Mainly fixed in most circumstances, although it's a bit problematic finding a solution that works across Chromium, Safari, Firefox.
Allowing varying the height of the row causes issues since the background is defined in the <div>, not on the <td>, and the Table
component doesnt allow controlling that style.

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/agents/index.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/agents/index.scss
@@ -87,16 +87,23 @@ $dropdown-button-content-z-index: 5;
     height: 100%;
   }
 
+  table tbody tr {
+    height: 30px;
+  }
+
   table tbody td {
     padding: 0;
     display: table-cell;
     vertical-align: middle;
-    height: 24px;
+    height: inherit;
   }
 
   table tbody .table-cell {
     padding: 10px;
-    height: 100%;
+    height: inherit;
+    line-height: 100%;
+    overflow: hidden;
+    word-break: break-word;
   }
 }
 
