Fix SASS 2 deprecation warnings
Remaining deprecation warnings appear to be in FontAwesome, Foundation Sites, Bourbon or Normalize SCSS libraries.

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/components/hierarchy/tree.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/components/hierarchy/tree.scss
@@ -16,7 +16,7 @@
 @import "../../global/common";
 
 $indent-width: 15px;
-$under-label-indent-width: (2 * $indent-width) / 3;
+$under-label-indent-width: calc((2 * $indent-width) / 3);
 $tree-connector-color: #ddd;
 $tick-width: $under-label-indent-width;
 $selected-color: #d2ebf0;
