--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/config_repos/defined_structs.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/config_repos/defined_structs.scss
@@ -20,7 +20,7 @@
 $inline-radius: 4px;
 $inline-spacing: 20px;
 $arrow-size: 6px;
-$arrow-horiz: ($arrow-size + $inline-spacing) / 2;
+$arrow-horiz: calc(($arrow-size + $inline-spacing) / 2);
 $stage-color: #4ad9d9;
 $fg-color: #023550;
 $label-color-group: #dee;
