--- a/server/src/main/webapp/WEB-INF/rails/app/views/admin/configuration/_heading.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/admin/configuration/_heading.html.erb
@@ -4,6 +4,6 @@
 
 <div class="heading">
     <h2>Configuration File</h2>
-    <span class="wbrSensitive"><%= go_config.location -%></span>
-    <span class='label'>Configuration File Path: </span>
+    <span><%= go_config.location -%></span>
+    <span class="label">Configuration File Path: </span>
 </div>
