Clean up another swathe of dead javascript and legacy Ruby

--- a/server/src/main/webapp/WEB-INF/rails/app/views/pipelines/_pipeline_header.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/pipelines/_pipeline_header.html.erb
@@ -12,12 +12,13 @@
           <%= link_to '', edit_path_for_pipeline(@pipeline.getName()), class: 'icon16 setting' %>
         </div>
     <% end %>
+<!--    FIXME - does this locking stuff work or can we remove? -->
     <% if @lockedPipeline %>
         <% if @pipeline.hasStage(@lockedPipeline) %>
             <% if @pipeline.canUnlock() %>
                 <div class="locked_instance" id='unlock'>
-                  <%== blocking_link_to_remote_new :name => "Click to unlock", :method => :post, :url => "/go/api/pipelines/#{@pipeline.getName()}/unlock",
-                                                   :update => {:failure => "message_pane", :success => 'function(){}'}, :html => {}, :headers => {'X-GoCD-Confirm' => 'true', 'Accept' => 'application/vnd.go.cd.v1+json', 'Content-Type' => 'application/json'}, :before => "spinny('unlock');" %>
+                  <%== link_blocking_post_to_server :name => "Click to unlock", :method => :post, :url => "/go/api/pipelines/#{@pipeline.getName()}/unlock",
+                                                    :update => {:failure => "message_pane", :success => 'function(){}'}, :html => {}, :headers => {'X-GoCD-Confirm' => 'true', 'Accept' => 'application/vnd.go.cd.v1+json', 'Content-Type' => 'application/json'}, :before => "Util.spinny('unlock');" %>
                 </div>
             <% else %>
                 <div class="locked_instance">
