--- a/server/src/main/webapp/WEB-INF/rails/app/views/stages/stage.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/stages/stage.html.erb
@@ -53,7 +53,7 @@
 
 <script type="text/javascript">
 
-    Util.on_load(function() {
+    jQuery(function() {
       var stage_run_timestamp_format_handler = function() {
         jQuery(".schedule_info .time").each(function (idx, timeSpan) {
           var timestamp = parseInt(jQuery(timeSpan).attr("data"));
