--- a/server/src/main/webapp/WEB-INF/rails/app/views/value_stream_map/show_material.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/value_stream_map/show_material.html.erb
@@ -30,7 +30,7 @@
 </div>
 
 <script type="text/javascript">
-    Util.on_load(function() {
+    jQuery(function() {
 
         resizeMapContainer();
         function resizeMapContainer() {
