--- a/server/src/main/webapp/WEB-INF/rails/app/views/admin/shared/_dirty_form.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/admin/shared/_dirty_form.html.erb
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    Util.on_load(function() {
+    jQuery(function() {
         skip_dirty_stop = false;
         jQuery('#<%= scope[:form_id] %>').dirty_form();
         jQuery('a:not(.skip_dirty_stop)').  dirty_stopper({ dialog : {title : "Unsaved Changes", height: 80}, message : "There are unsaved changes on your form. 'Proceed' will discard these changes."});
