--- a/server/src/main/webapp/WEB-INF/rails/app/views/pipelines/_pipeline_stage_bar.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/pipelines/_pipeline_stage_bar.html.erb
@@ -21,14 +21,14 @@
             <%
                scope[:id] = "stage_bar_#{scope[:label]}_#{scope[:stage_name]}"
                scope[:title] = "#{scope[:label]} #{scope[:stage_name]}"
-               scope[:html_opts] = {:class => "stage_action", :id => scope[:id] ,:title => scope[:title] ,:'aria-label' => scope[:title]}
-               scope[:before_opts] = "spinny('operate_#{scope[:stage_name]}')"
+               scope[:html_opts] = {:class => "stage_action", :id => scope[:id], :title => scope[:title], :'aria-label' => scope[:title]}
+               scope[:before_opts] = "Util.spinny('operate_#{scope[:stage_name]}')"
                if scope[:stage_in_status_bar].canRun() && scope[:stage_in_status_bar].isScheduled() %>
-                <%== blocking_link_to_remote_new :name => "&nbsp;", :method => :post, :url => run_stage_path(:stage_name => scope[:stage_name], stage_counter: scope[:stage_counter]), :html => scope[:html_opts], :update => scope[:update_opts], :headers => {'X-GoCD-Confirm': 'true', 'Accept': 'application/vnd.go.cd+json', 'Content-Type': 'application/json'}, :before => scope[:before_opts] %>
+                <%== link_blocking_post_to_server :name => "&nbsp;", :method => :post, :url => run_stage_path(:stage_name => scope[:stage_name], stage_counter: scope[:stage_counter]), :html => scope[:html_opts], :headers => { 'X-GoCD-Confirm': 'true', 'Accept': 'application/vnd.go.cd+json', 'Content-Type': 'application/json'}, :before => scope[:before_opts] %>
 
         <% end %>
             <% if scope[:stage_in_status_bar].isRunning() %>
-                <%== blocking_link_to_remote_new :name => "&nbsp;", :method => :post, :url => cancel_stage_path(@pipeline), :html => scope[:html_opts], :update => scope[:update_opts], :headers => {'X-GoCD-Confirm': 'true', 'Accept': 'application/vnd.go.cd+json', 'Content-Type': 'application/json'} , :before => scope[:before_opts] %>
+                <%== link_blocking_post_to_server :name => "&nbsp;", :method => :post, :url => cancel_stage_path(@pipeline), :html => scope[:html_opts], :headers => { 'X-GoCD-Confirm': 'true', 'Accept': 'application/vnd.go.cd+json', 'Content-Type': 'application/json'} , :before => scope[:before_opts] %>
             <% end %>
         </div>
     <% end %>
