--- a/server/src/main/webapp/WEB-INF/rails/app/views/shared/_config_save_actions.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/shared/_config_save_actions.html.erb
@@ -4,7 +4,7 @@
         <label class="inline">This will refresh the page and you will lose your changes on this page.</label>
     </div>
     <script type="text/javascript">
-        Util.on_load(function() {
+        jQuery(function() {
            jQuery("#reload_config").click(function() {
                var location = "<%= request.referer -%>";
                if (location.endsWith("#")) {
