--- a/server/src/main/webapp/WEB-INF/rails/app/views/stages/_jobs_breakdown.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/stages/_jobs_breakdown.html.erb
@@ -15,7 +15,7 @@
         <% end %>
     </ul>
     <script type='text/javascript'>
-        Util.on_load(new function() {
+        jQuery(function() {
             AjaxRefreshers.main().afterRefreshOf('<%= scope[:parent_id] %>', (function() {
                 make_collapsable('<%= scope[:parent_id] %>');
             }));
