--- a/server/src/main/webapp/WEB-INF/rails/app/views/shared/_head.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/shared/_head.html.erb
@@ -13,7 +13,7 @@
   <%= stylesheet_link_tag *webpack_assets_service.getCSSAssetPathsFor("single_page_apps/header_footer_shim") %>
 <%- end %>
 
-<%= javascript_include_tag 'lib/d3-3.5.17.min' %>
+<%= javascript_include_tag 'lib/d3-3.5.17' %>
 
 <%= yield :after_javascript %>
 <link rel="shortcut icon" href="<%=asset_path('cruise.ico')%>"/>
