--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/new-theme.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/new-theme.scss
@@ -443,8 +443,7 @@ $arrow-border-active-color: lighten(#000, 50%);
 
 // tab style
 
-.sub_tab_container,
-.agent_details {
+.sub_tab_container {
   .sub_tabs_container {
     margin-bottom: 0;
     background: none !important;
@@ -518,7 +517,6 @@ $arrow-border-active-color: lighten(#000, 50%);
     }
   }
 
-  &.project_management,
   &.general,
   &.materials,
   &.stages,
@@ -596,7 +594,6 @@ div#tab_container {
 }
 
 .general li#general a,
-.project_management li#project_management a,
 .materials li#materials a,
 .stages li#stages a,
 .environment_variables li#environment_variables a,
@@ -604,13 +601,9 @@ div#tab_container {
 .permissions li#permissions a,
 .stage li#stage a,
 .jobs li#jobs a,
-.stage_variables li#stage_variables a,
 .settings li#settings a,
 .tasks li#tasks a,
-.artifacts li#artifacts a,
-.jobs_variables li#jobs_variables a,
-.tabs li#tabs a,
-.jobs_permissions li#jobs_permissions a {
+.artifacts li#artifacts a {
   color: #333;
   background: $current-tab-bg;
   position: relative;
@@ -1458,21 +1451,6 @@ a:visited.help {
   }
 }
 
-.unpause_wrapper button.primary {
-  background-color: #666 !important;
-  height: 22px;
-  border: 1px solid #666;
-
-  &:hover {
-    background-color: #666 !important;
-  }
-}
-
-.pause_wrapper button.submit {
-  height: 22px;
-  border: 1px solid #ccc;
-}
-
 #stages .build_cause .modified_files div {
   padding: 2px 5px 5px 20px;
 }
@@ -1679,19 +1657,6 @@ input#search_id {
   margin-top: 0;
 }
 
-.tristate {
-  background-position: 0 5px;
-}
-
-.promote_button {
-  background-color: transparent;
-
-  .promote_up,
-  .promote_down {
-    background-color: transparent;
-  }
-}
-
 table.variables th {
   font-size: 14px;
   padding-bottom: 5px;
@@ -1724,24 +1689,6 @@ table.variables th {
 
 .build_detail .sidebar_history .time_ago {
   margin-left: 0 !important;
-}
-
-.changes_button_wrapper button.submit,
-.operate button.submit,
-.deploy button.submit,
-.pause_wrapper button.submit {
-  background-color: #dedede;
-}
-
-.exec_task_editor {
-  label.inline {
-    display: inline-block;
-    margin-bottom: 5px;
-  }
-
-  textarea.exec-task-arguments {
-    height: 100px;
-  }
 }
 
 #content_area textarea {
@@ -1881,37 +1828,6 @@ code,
     padding-bottom: 10px;
   }
 
-  .title_secondary_info {
-    float: right;
-  }
-
-  .title_action_wrapper {
-    ul {
-      margin-top: 1px;
-      margin-left: 10px;
-
-      li {
-        a {
-          margin-left: 0;
-          padding-left: 10px;
-        }
-
-        .delete_icon_disabled {
-          margin-top: 3px;
-        }
-
-        .delete_icon {
-          margin-left: 10px;
-          padding-left: 0;
-        }
-
-        > span {
-          padding-left: 10px;
-        }
-      }
-    }
-  }
-
   h2.entity_title {
     color: $txt-color;
     font-size: rem-calc(17px);
@@ -1921,14 +1837,6 @@ code,
     padding: 0 0 0 37px;
     background-size: 40px 40px;
     background-position: -8px -10px;
-  }
-
-  .list_table {
-    .actions {
-      .delete_icon_disabled {
-        margin-top: 3px;
-      }
-    }
   }
 
   .heading {
@@ -1962,35 +1870,6 @@ code,
 
 #tab-content-of-source-xml .heading h2 {
   font-size: 20px;
-}
-
-.job_tabs_section,
-.artifact {
-  span.contextual_help {
-    position: relative;
-    top: -13px;
-  }
-}
-
-.on_cancel_task {
-  .task_entry {
-    clear: both;
-    float: left;
-    width: 100%;
-  }
-}
-
-.agent_details_pane div {
-  clear: both;
-}
-
-.path_textbox {
-  box-shadow: none;
-
-  label {
-    padding: 7px 4px 7px 6px;
-    background: #e5e5e5;
-  }
 }
 
 .content_wrapper_outer {
